fix: scroll to top on firefox
https://stackoverflow.com/questions/8149155/animate-scrolltop-not-working-in-firefox

--- a/static/css/index.css
+++ b/static/css/index.css
@@ -306,6 +306,7 @@ blockquote:last-child {
   opacity: 0.8;
   display: none;
   z-index: 888;
+  cursor: pointer;
 }
 #top .arrow {
   margin: 0 auto;
